5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1888_1597.log
== TEST (2019-07-09 16:16:31) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	for i in range (shape(custo)[0]<desconto):
		
print(custo)
-- ERROR:
File "XXXX", line 10
    print(custo)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:40) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	for i in range (shape(custo)[0]<desconto):
		
print(custo)
-- ERROR:
File "XXXX", line 10
    print(custo)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:46) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	for i in range (shape(custo)[0]<desconto):
		
	print(custo)
-- ERROR:
File "XXXX", line 10
    print(custo)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:31) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo < desconto:
		custo = custo
	elif custo <= desconto:
		custo = custo - 5
	print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:58) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo < desconto:
		custo = custo
	elif custo <= desconto:
		custo = custo - 5
	print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:26) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = custo
	elif custo <= desconto:
		custo = custo - 5
	print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:36) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = custo
	elif custo[0] <= desconto:
		custo = custo - 5
	print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:48) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = custo
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:46) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = custo
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:21) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:40) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[0]):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:47) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:04) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo.T
desconto=80
for i in range(shape(custo)[i:]):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:21) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

custo=custo
desconto=80
for i in range(shape(custo)[i:]):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:27) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
desconto=80
for i in range(shape(custo)[i:]):
	if custo[0] < desconto:
		custo = scusto
	elif custo[0] <= desconto:
		custo = custo - 5
print(custo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:11) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[:]):
	if shape(custo)[i:] < desconto:
		custo = scusto
	elif shape(custo(custo)[i:]) <= desconto:
	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:14) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[:]):
	if shape(custo)[i:] < desconto:
		custo = scusto
	elif shape(custo(custo)[i:]) <= desconto:
	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:20) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[:]):
	if shape(custo)[i:] < desconto:
		custo = scusto
	elif shape(custo(custo)[i:]) <= desconto:
print(custo)

-- ERROR:
File "XXXX", line 11
    print(custo)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:57) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[:]):
	if shape(custo)[i:] < desconto:
		custo = custo
	elif shape(custo(custo)[i:]) <= desconto:
		custo - custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:09) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[i:]):
	if shape(custo)[i:] < desconto:
		custo = custo
	elif shape(custo(custo)[i:]) <= desconto:
		custo - custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:30) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[0]):
	if shape(custo)[i:] < desconto:
		custo = custo
	elif shape(custo(custo)[0]) <= desconto:
		custo - custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:41) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[0]):
	if shape(custo)[0] < desconto:
		custo = custo
	elif shape(custo(custo)[0]) <= desconto:
		custo - custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:12) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[0]):
	if shape(custo)[0] < desconto:
		custo = custo
	elif shape(custo(custo)[0]) <= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:33) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80

for i in range(shape(custo)[0]):
	if shape(custo)[0] < desconto:
		custo = custo
	elif shape(custo(custo)[0]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:52) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[0]):
	if shape(custo)[0] < desconto:
		custo = custo
	elif shape(custo(custo)[0])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif shape(custo(custo)[0])  desconto:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:57) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[0]):
	if shape(custo)[0] < desconto:
		custo = custo
	elif shape(custo(custo)[0])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif shape(custo(custo)[0])  desconto:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:18) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if shape(custo)[i:] < desconto:
		custo = custo
	elif shape(custo(custo)[0])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif shape(custo(custo)[0])  desconto:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:46) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo)[i:] < desconto:
		custo = custo
	elif shape(custo(custo)[0])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif shape(custo(custo)[0])  desconto:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:53) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo)[i:] < desconto:
		custo = custo
	elif(custo(custo)[0])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif(custo(custo)[0])  desconto:
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:09) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo)[i:] < desconto:
		custo = custo
	elif (custo)[0]  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif (custo)[0]  desconto:
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:16) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo)[i:] < desconto:
		custo = custo
	elif (custo)[0]  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif (custo)[0]  desconto:
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:21) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo)[i:] < desconto:
		custo = custo
	elif (custo)[i:]  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif (custo)[i:]  desconto:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:40) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))

desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif (custo[i:])  desconto:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:00) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= cutso.T
desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:])  desconto:
		custo = custo - 5
print(custo)


-- ERROR:
File "XXXX", line 10
    elif (custo[i:])  desconto:
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:14) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= cutso.T
desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:32) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:32) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i:]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:00) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i:j]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:08) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i]):
	if (custo[i:]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:18) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < desconto:
		custo = custo
	elif (custo[i:]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:21) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < desconto:
		custo = custo
	elif (custo[i]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:49) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
desconto=80
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < desconto:
		custo = custo
	elif (custo[i]) >= desconto:
		custo = custo - 5
print(custo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:59) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
valor=80
desconto=5 # acima de 80 R$reais
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < valor:
		custo = custo
	elif (custo[i]) >= valor:
		ct= custo - desconto
print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:27) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
valor=80
desconto=5 # acima de 80 R$reais
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < valor:
		custo = custo
	elif (custo[i]) >= valor:
		ct= (sum(custo)) - desconto
		
print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:54) 
-- CODE:
from numpy import*

custo=array(eval(input("Vetor de custo de itens: ")))
custo= custo.T
valor=80
desconto=5 # acima de 80 R$reais
i = 0
for i in range(shape(custo)[i]):
	if (custo[i]) < valor:
		custo = custo
	elif (custo[i]) >= valor:
		ct= (sum(custo)[i]) - desconto
		
print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
